Chore: Fix slider images overflowing to x axis because of the mobile navbar

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -2,6 +2,9 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+
+
 }
 
 .search_btn__active {
